--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,108 @@
-body {
+/* 
+==============================
+BASIC SETUP
+==============================
+*/
+
+body, button, form, input, textarea {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+}
+
+p {
+    line-height: 1.35em;
+}
+
+.container {
+    width: 920px;
+    max-width: 92%;
+    margin: 0 auto;
+    /* border: 1px solid red; */
+}
+
+::selection {
+    background: #1D6340;
+    color: #fff;
+}
+
+/* 
+==============================
+HEADER
+==============================
+*/
+
+header {
+    background: #1D6340;
+    color: #fff;
+    padding: 2em 0;
+    margin-bottom: 2em;
+}
+
+header h1 {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+/* 
+==============================
+SECTION
+==============================
+*/
+
+form {
+    /* border: 1px solid red; */
+}
+
+form label {
+    margin: 0.5em 0;
+}
+
+form .label-lg {
+    font-size: 2em;
+}
+
+form .fw {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-gap: 0.5em;
+}
+
+form .fw input {
+    width: 100%;
+    padding: 0.5em;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+
+/* 
+==============================
+FOOTER
+==============================
+*/
+
+footer {
+    background: #333;
+    color: #ccc;
+    padding: 2em 0;
+    margin-top: 2em;
+}
+
+footer .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer a {
+    background: #ccc;
+    color: #333;
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+footer a:hover {
+    background: transparent;
+    color: #fff;
+    border-radius: 1.5em;
 }
